# YejoongGoose

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_test.sh  test_various_stocks.sh
.github/workflows/: deploy.yml
apps/: daily_breakout_app.py  flask_app.py
cdk/: app.py  cdk.context.json  cdk.json
cdk/stacks/: __init__.py  ec2_stack.py  vpc_stack.py
config/: strategy.breakout.yaml  symbols.yaml  tick_size.py  trading_config.yaml
deploy/: DEPLOY_GUIDE.md  cdk_deploy.sh  cdk_destroy.sh  manual_deploy.sh  setup_github_deploy.sh  trading-bot.service  trading-bot.timer  trading-web.service  user_data.sh
docs/: skills.md  what_I_can_use.md
skills/: architecture.md
skills/kis_tools/: SKILL.md
skills/kis_tools/mcp_wrappers/: kis_price.py
skills/trading_core/: SKILL.md
skills/trading_core/graph/: graph_builder.py  nodes.py  state.py
skills/trading_core/strategies/: breakout_etf.py  risk_rules.py
tests/: README_TESTS.md  __init__.py  test_all_nodes.py  test_error_handling.py  test_fetch_market_data.py
